<?xml version="1.0"?>
<package format="2">
  <name>float_description</name>
  <version>0.0.0</version>
  <description>The float_description package</description>

  <maintainer email="mzhou@uri.edu">Emir Cem Gezer</maintainer>
  <author email="mzhou@uri.edu">Emir Cem Gezer</author>
  <author email="mzhou@uri.edu">Mingxi Zhou</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>tf2_ros</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>


  <export>

  </export>

</package>
