<?xml version="1.0"?>
<package format="2">
  <name>float_stonefish</name>
  <version>0.0.0</version>
  <description>The float_stonefish package</description>

  <maintainer email="mzou@uri.edu">Emir Cem Gezer</maintainer>
  <author email="mzhou@uri.edu">Emir Cem Gezer</author>
  <author email="mzhou@uri.edu">Mingxi Zhou</author>
  <author email="mzhou@uri.edu">Lin Zhao</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>stonefish_mvp</depend>

</package>
